# kirin

./: Cargo.toml
analyzer/: Cargo.toml
analyzer/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
errors/src/: lib.rs
instructions/src/: constants.rs  decoder.rs  encoder.rs  lib.rs  opcodes.rs
parser/: Cargo.toml
parser/src/: expression.rs  expressions.rs  lib.rs  main.rs  object.rs  span.rs  statements.rs  value.rs  visitor.rs
parser/src/expression/: assignment.rs  binary.rs  call.rs  grouping.rs  literal.rs  unary.rs  variable.rs
parser/src/expressions/: assignment.rs  binary.rs  call.rs  grouping.rs  literal.rs  unary.rs  variable.rs
parser/src/statements/: declaration.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  span.rs  token.rs
test-code/: first.kn
types/src/: lib.rs
vm/: Cargo.toml
vm/src/: frame.rs  handlers.rs  lib.rs  main.rs  opcodes.rs  program.rs  register.rs
vm/src/handlers/: arithmetic.rs  control.rs  conversions.rs  library.rs  load.rs  math.rs  registers.rs
