[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
types = { path = "../types" }
scanner = { path = "../scanner" }
errors = { path = "../errors" }
vm = { path = "../vm" }
instructions = { path = "../instructions" }
analyzer = { path = "../analyzer" }

